bgc-dsl/bgcLSPServer/gen/python/BgcDsl/BgcDslParser.py
# Generated from BgcDsl.g4 by ANTLR 4.12.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class BgcDslParser ( Parser ):

    grammarFileName = "BgcDsl.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'model'", "'substances'", "'parameters'", 
                     "'diagnostics'", "'='", "'int'", "'float'", "'string'", 
                     "'abstract'", "'compartment'", "'extends'", "'{'", 
                     "'states'", "'}'", "'update'", "'connection'", "'('", 
                     "','", "')'", "'from'", "'to'", "'calc'", "'alternatives'", 
                     "':'", "'::'", "'^'", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'['", "']'", "'exp'", "'inverse'", "'max'", "'>'", 
                     "'.'", "<INVALID>", "<INVALID>", "<INVALID>", "'this one has been deactivated'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "NUMBER", "CUSTOM_STRING", 
                      "UNIT_STRING", "INT", "ID", "NUM", "WS", "COMMENT" ]

    RULE_bgcModel = 0
    RULE_substanceDeclaration = 1
    RULE_parameterDeclaration = 2
    RULE_environmentVariableDeclaration = 3
    RULE_primitiveTypes = 4
    RULE_compartment = 5
    RULE_substanceState = 6
    RULE_updateState = 7
    RULE_connection = 8
    RULE_substanceExpression = 9
    RULE_calculation = 10
    RULE_basicCalculation = 11
    RULE_alternativeCalculation = 12
    RULE_unit = 13
    RULE_unitElement = 14
    RULE_groupUnit = 15
    RULE_prefixUnit = 16
    RULE_arithmeticExpression = 17
    RULE_eAdditionOperator = 18
    RULE_multiplicationExpression = 19
    RULE_eMultiplicationOperator = 20
    RULE_powerExpression = 21
    RULE_valueExpression = 22
    RULE_arrayExpression = 23
    RULE_functionCallingExpression = 24
    RULE_function = 25
    RULE_literalExpression = 26
    RULE_literal = 27
    RULE_numberLiteral = 28
    RULE_stringLiteral = 29
    RULE_parenthesisExpression = 30
    RULE_termReference = 31
    RULE_subterm = 32
    RULE_qualifiedName = 33

    ruleNames =  [ "bgcModel", "substanceDeclaration", "parameterDeclaration", 
                   "environmentVariableDeclaration", "primitiveTypes", "compartment", 
                   "substanceState", "updateState", "connection", "substanceExpression", 
                   "calculation", "basicCalculation", "alternativeCalculation", 
                   "unit", "unitElement", "groupUnit", "prefixUnit", "arithmeticExpression", 
                   "eAdditionOperator", "multiplicationExpression", "eMultiplicationOperator", 
                   "powerExpression", "valueExpression", "arrayExpression", 
                   "functionCallingExpression", "function", "literalExpression", 
                   "literal", "numberLiteral", "stringLiteral", "parenthesisExpression", 
                   "termReference", "subterm", "qualifiedName" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    NUMBER=39
    CUSTOM_STRING=40
    UNIT_STRING=41
    INT=42
    ID=43
    NUM=44
    WS=45
    COMMENT=46

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.12.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class BgcModelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token
            self._substanceDeclaration = None # SubstanceDeclarationContext
            self.substanceDeclarations = list() # of SubstanceDeclarationContexts
            self._parameterDeclaration = None # ParameterDeclarationContext
            self.parameterDeclarations = list() # of ParameterDeclarationContexts
            self._environmentVariableDeclaration = None # EnvironmentVariableDeclarationContext
            self.environments = list() # of EnvironmentVariableDeclarationContexts
            self._compartment = None # CompartmentContext
            self.compartments = list() # of CompartmentContexts
            self._connection = None # ConnectionContext
            self.connections = list() # of ConnectionContexts

        def ID(self):
            return self.getToken(BgcDslParser.ID, 0)

        def substanceDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BgcDslParser.SubstanceDeclarationContext)
            else:
                return self.getTypedRuleContext(BgcDslParser.SubstanceDeclarationContext,i)


        def compartment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BgcDslParser.CompartmentContext)
            else:
                return self.getTypedRuleContext(BgcDslParser.CompartmentContext,i)


        def connection(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BgcDslParser.ConnectionContext)
            else:
                return self.getTypedRuleContext(BgcDslParser.ConnectionContext,i)


        def parameterDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BgcDslParser.ParameterDeclarationContext)
            else:
                return self.getTypedRuleContext(BgcDslParser.ParameterDeclarationContext,i)


        def environmentVariableDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BgcDslParser.EnvironmentVariableDeclarationContext)
            else:
                return self.getTypedRuleContext(BgcDslParser.EnvironmentVariableDeclarationContext,i)


        def getRuleIndex(self):
            return BgcDslParser.RULE_bgcModel

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBgcModel" ):
                listener.enterBgcModel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBgcModel" ):
                listener.exitBgcModel(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBgcModel" ):
                return visitor.visitBgcModel(self)
            else:
                return visitor.visitChildren(self)




    def bgcModel(self):

        localctx = BgcDslParser.BgcModelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_bgcModel)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(BgcDslParser.T__0)
            self.state = 69
            localctx.name = self.match(BgcDslParser.ID)
            self.state = 70
            self.match(BgcDslParser.T__1)
            self.state = 72 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 71
                localctx._substanceDeclaration = self.substanceDeclaration()
                localctx.substanceDeclarations.append(localctx._substanceDeclaration)
                self.state = 74 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 448) != 0)):
                    break

            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 76
                self.match(BgcDslParser.T__2)
                self.state = 80
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 448) != 0):
                    self.state = 77
                    localctx._parameterDeclaration = self.parameterDeclaration()
                    localctx.parameterDeclarations.append(localctx._parameterDeclaration)
                    self.state = 82
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 85
                self.match(BgcDslParser.T__3)
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 448) != 0):
                    self.state = 86
                    localctx._environmentVariableDeclaration = self.environmentVariableDeclaration()
                    localctx.environments.append(localctx._environmentVariableDeclaration)
                    self.state = 91
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 96 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 96
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [9, 10]:
                    self.state = 94
                    localctx._compartment = self.compartment()
                    localctx.compartments.append(localctx._compartment)
                    pass
                elif token in [16]:
                    self.state = 95
                    localctx._connection = self.connection()
                    localctx.connections.append(localctx._connection)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 98 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 67072) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SubstanceDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.type_ = None # PrimitiveTypesContext
            self.name = None # Token

        def unit(self):
            return self.getTypedRuleContext(BgcDslParser.UnitContext,0)


        def primitiveTypes(self):
            return self.getTypedRuleContext(BgcDslParser.PrimitiveTypesContext,0)


        def ID(self):
            return self.getToken(BgcDslParser.ID, 0)

        def getRuleIndex(self):
            return BgcDslParser.RULE_substanceDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubstanceDeclaration" ):
                listener.enterSubstanceDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubstanceDeclaration" ):
                listener.exitSubstanceDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubstanceDeclaration" ):
                return visitor.visitSubstanceDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def substanceDeclaration(self):

        localctx = BgcDslParser.SubstanceDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_substanceDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            localctx.type_ = self.primitiveTypes()
            self.state = 101
            localctx.name = self.match(BgcDslParser.ID)
            self.state = 102
            self.unit()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.type_ = None # PrimitiveTypesContext
            self.name = None # Token
            self.expression = None # ArithmeticExpressionContext

        def unit(self):
            return self.getTypedRuleContext(BgcDslParser.UnitContext,0)


        def primitiveTypes(self):
            return self.getTypedRuleContext(BgcDslParser.PrimitiveTypesContext,0)


        def ID(self):
            return self.getToken(BgcDslParser.ID, 0)

        def arithmeticExpression(self):
            return self.getTypedRuleContext(BgcDslParser.ArithmeticExpressionContext,0)


        def getRuleIndex(self):
            return BgcDslParser.RULE_parameterDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterDeclaration" ):
                listener.enterParameterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterDeclaration" ):
                listener.exitParameterDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameterDeclaration" ):
                return visitor.visitParameterDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def parameterDeclaration(self):

        localctx = BgcDslParser.ParameterDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_parameterDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            localctx.type_ = self.primitiveTypes()
            self.state = 105
            localctx.name = self.match(BgcDslParser.ID)
            self.state = 106
            self.unit()
            self.state = 107
            self.match(BgcDslParser.T__4)
            self.state = 108
            localctx.expression = self.arithmeticExpression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EnvironmentVariableDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.type_ = None # PrimitiveTypesContext
            self.name = None # Token
            self.expression = None # ArithmeticExpressionContext

        def unit(self):
            return self.getTypedRuleContext(BgcDslParser.UnitContext,0)


        def primitiveTypes(self):
            return self.getTypedRuleContext(BgcDslParser.PrimitiveTypesContext,0)


        def ID(self):
            return self.getToken(BgcDslParser.ID, 0)

        def arithmeticExpression(self):
            return self.getTypedRuleContext(BgcDslParser.ArithmeticExpressionContext,0)


        def getRuleIndex(self):
            return BgcDslParser.RULE_environmentVariableDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnvironmentVariableDeclaration" ):
                listener.enterEnvironmentVariableDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnvironmentVariableDeclaration" ):
                listener.exitEnvironmentVariableDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEnvironmentVariableDeclaration" ):
                return visitor.visitEnvironmentVariableDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def environmentVariableDeclaration(self):

        localctx = BgcDslParser.EnvironmentVariableDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_environmentVariableDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            localctx.type_ = self.primitiveTypes()
            self.state = 111
            localctx.name = self.match(BgcDslParser.ID)
            self.state = 112
            self.unit()
            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 113
                self.match(BgcDslParser.T__4)
                self.state = 114
                localctx.expression = self.arithmeticExpression()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrimitiveTypesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return BgcDslParser.RULE_primitiveTypes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrimitiveTypes" ):
                listener.enterPrimitiveTypes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrimitiveTypes" ):
                listener.exitPrimitiveTypes(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimitiveTypes" ):
                return visitor.visitPrimitiveTypes(self)
            else:
                return visitor.visitChildren(self)




    def primitiveTypes(self):

        localctx = BgcDslParser.PrimitiveTypesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_primitiveTypes)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 448) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CompartmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token
            self.parent = None # Token
            self._substanceState = None # SubstanceStateContext
            self.states = list() # of SubstanceStateContexts
            self._parameterDeclaration = None # ParameterDeclarationContext
            self.constants = list() # of ParameterDeclarationContexts
            self._environmentVariableDeclaration = None # EnvironmentVariableDeclarationContext
            self.evnironments = list() # of EnvironmentVariableDeclarationContexts
            self._calculation = None # CalculationContext
            self.calculations = list() # of CalculationContexts
            self._updateState = None # UpdateStateContext
            self.updateStates = list() # of UpdateStateContexts

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(BgcDslParser.ID)
            else:
                return self.getToken(BgcDslParser.ID, i)

        def substanceState(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BgcDslParser.SubstanceStateContext)
            else:
                return self.getTypedRuleContext(BgcDslParser.SubstanceStateContext,i)


        def calculation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BgcDslParser.CalculationContext)
            else:
                return self.getTypedRuleContext(BgcDslParser.CalculationContext,i)


        def updateState(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BgcDslParser.UpdateStateContext)
            else:
                return self.getTypedRuleContext(BgcDslParser.UpdateStateContext,i)


        def parameterDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BgcDslParser.ParameterDeclarationContext)
            else:
                return self.getTypedRuleContext(BgcDslParser.ParameterDeclarationContext,i)


        def environmentVariableDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BgcDslParser.EnvironmentVariableDeclarationContext)
            else:
                return self.getTypedRuleContext(BgcDslParser.EnvironmentVariableDeclarationContext,i)


        def getRuleIndex(self):
            return BgcDslParser.RULE_compartment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompartment" ):
                listener.enterCompartment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompartment" ):
                listener.exitCompartment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompartment" ):
                return visitor.visitCompartment(self)
            else:
                return visitor.visitChildren(self)




    def compartment(self):

        localctx = BgcDslParser.CompartmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_compartment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9:
                self.state = 119
                self.match(BgcDslParser.T__8)


            self.state = 122
            self.match(BgcDslParser.T__9)
            self.state = 123
            localctx.name = self.match(BgcDslParser.ID)
            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==11:
                self.state = 124
                self.match(BgcDslParser.T__10)
                self.state = 125
                localctx.parent = self.match(BgcDslParser.ID)


            self.state = 128
            self.match(BgcDslParser.T__11)
            self.state = 129
            self.match(BgcDslParser.T__12)
            self.state = 131 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 130
                localctx._substanceState = self.substanceState()
                localctx.states.append(localctx._substanceState)
                self.state = 133 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==43):
                    break

            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 135
                self.match(BgcDslParser.T__2)
                self.state = 139
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 448) != 0):
                    self.state = 136
                    localctx._parameterDeclaration = self.parameterDeclaration()
                    localctx.constants.append(localctx._parameterDeclaration)
                    self.state = 141
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 151
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 144
                self.match(BgcDslParser.T__3)
                self.state = 148
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 448) != 0):
                    self.state = 145
                    localctx._environmentVariableDeclaration = self.environmentVariableDeclaration()
                    localctx.evnironments.append(localctx._environmentVariableDeclaration)
                    self.state = 150
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 156
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==22 or _la==23:
                self.state = 153
                localctx._calculation = self.calculation()
                localctx.calculations.append(localctx._calculation)
                self.state = 158
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 160 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 159
                localctx._updateState = self.updateState()
                localctx.updateStates.append(localctx._updateState)
                self.state = 162 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==15):
                    break

            self.state = 164
            self.match(BgcDslParser.T__13)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SubstanceStateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.substance = None # Token
            self.expression = None # ArithmeticExpressionContext

        def ID(self):
            return self.getToken(BgcDslParser.ID, 0)

        def arithmeticExpression(self):
            return self.getTypedRuleContext(BgcDslParser.ArithmeticExpressionContext,0)


        def getRuleIndex(self):
            return BgcDslParser.RULE_substanceState

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubstanceState" ):
                listener.enterSubstanceState(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubstanceState" ):
                listener.exitSubstanceState(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubstanceState" ):
                return visitor.visitSubstanceState(self)
            else:
                return visitor.visitChildren(self)




    def substanceState(self):

        localctx = BgcDslParser.SubstanceStateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_substanceState)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            localctx.substance = self.match(BgcDslParser.ID)
            self.state = 169
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 167
                self.match(BgcDslParser.T__4)
                self.state = 168
                localctx.expression = self.arithmeticExpression()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UpdateStateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.state = None # Token
            self.expression = None # ArithmeticExpressionContext

        def ID(self):
            return self.getToken(BgcDslParser.ID, 0)
